# saurus

./: .gitignore  Cargo.toml  README.md  build.sh  main.out  out.txt  run.sh  tmp.txt
src/: main.rs  notes.txt  tokenizer.rs  transpiler.rs
src/tokenizer/: latexer.rs  parse.rs  re.rs
src/transpiler/: code_blocks.rs  generator.rs  latexer.rs  lexer.rs  parser.rs  re.rs  re.rs.bkp
tests/: notes.md  notes.txt  test.md  test.tex
tests/TeX/: main.tex
