[package]
name = "saurus"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Markdown to LaTeX Transpiler"
repository = "https://github.com/paytonward6/saurus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["cargo"] }
regex = "1.7.1"
strum_macros = "0.24.3"
strum = "0.24.1"
